--- a/src/design/tabs.scss
+++ b/src/design/tabs.scss
@@ -28,7 +28,7 @@
 @mixin tabsTheme($colors, $theme) {
 .evan-tabs {
   @media (min-width: 768px) {
-    background-color: rgba(map-get($theme, background-color), 0.5);
+    background-color: rgba(map-get($theme, background-color-2), 0.5);
 
     button {
       color: map-get($theme, text-color);
