--- a/src/structure/content.scss
+++ b/src/structure/content.scss
@@ -186,8 +186,6 @@
   font-weight: 600;
 
   margin: 0 0 12px;
-
-  text-transform: uppercase;
 }
 
 .evan-content .content-heading, .content-heading.standalone {
